fixed horizontal scroll by setting new section width to 100% instead of vw

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h3 {
 }
 
 .column4 {
-    /*width: 264px;*/
+    height: 530px;
     background-color: white;
 }
 
@@ -140,4 +140,10 @@ h3 {
     border-bottom: 10px solid rgb(243, 243, 243);
     padding: 5%;
     font-weight: bold;
+}
+
+.big-picture {
+    width: 100%;
+    height: 60vh;
+    background-color: red;
 }
